# bioinformatics

./: .gitignore
bioinformatics/: .gitignore  main.py  pyproject.toml
bioinformatics/bioinformatics/: main.py
bioinformatics/bioinformatics/functions/: align.py  alignment.py  augment.py  benchmark.py  blast.py  clean.py  consensus.py  file_utils.py  gap.py  ingest.py  orf.py  partition.py  phylo_tips.py  phylogenies.py  phylogeny.py  supports.py  tasks.py  trim.py
bioinformatics/bioinformatics/models/: alignment.py  phylogeny.py  trim.py
bioinformatics/bioinformatics/utils/lep1/: all_labels.py  filters.py
bioinformatics/bioinformatics/utils/zfmk1/: filters.py
bioinformatics/bioinformatics/workflows/: workflow_BLAST.py  workflow_align.py  workflow_alpha.py  workflow_benchmark.py  workflow_extract_from_reference.py
bioinformatics/tests/: test_bioinformatics.py
